[package]
name = "arena_to_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arena_rs = { path = "../arena_rs" }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { version = "1", features = ["derive"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17.5"
build_html = "2.4.0"
